--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cook-books",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "antd-mobile": "^2.2.11",
